--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,227 +3,133 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
+/*********Contacto*************/
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
+.contacto {
+  height: 100vh;
+  min-height: 100vh;
+  /*Letra para toda la sección*/
+  font-family: "Bebas Neue";
+  width: 1500px;
   max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
+  margin: auto;
+  color: #E6B54A;
+  /*Para que los patrones y la columna central queden en la misma línea*/
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  justify-content: space-between;
+  /*Para que los patrones de los costados se escondan*/
+  overflow: hidden;
+  background-color: #FFFFFF;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+
+/*Contacto y Ubicación, datos de la columna central*/
+
+.contacto .columna_contacto {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  gap: 5px;
+  height: 98%;
+  width: 70%;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+
+/*Parte de arriba de la columna, imagen de araña más títulos*/
+
+#columnaarriba {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  height: 30vh;
+  margin: 2% auto 2% auto;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+
+/*Caja de imagen de araña*/
+
+.imagen_contacto {
+  text-align: center;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
+/*Caja que contiene los títulos*/
+
+.titulos_contacto {
+  text-align: center;
+  margin: 10% auto;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+
+/*Fuente de títulos*/
+
+.titulos_contacto h1 {
+  font-size: 6vh;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+/*Este componente es de datos cliente y mapa*/
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.datoscliente_ubicacion {
+  display: flex;
+  flex-direction: row;
+  width: 140vh;
+  max-width: 100%;
+  margin: 5% auto;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+
+/*Datos cliente*/
+
+#datoscliente {
+  width: 100%;
+  text-align: center;
+  align-self: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+/*Fuente h1 dentro de datos cliente*/
+
+.contacto .columna_contacto .datoscliente_ubicacion #datoscliente h1 {
+  font-size: 4vh;
+  line-height: 7vh;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+
+/*Fuente h3 dentro de datos cliente*/
+
+.contacto .columna_contacto .datoscliente_ubicacion #datoscliente h3 {
+  font-size: 2.5vh;
+  line-height: 3vh;
+  color: rgba(73, 70, 68, 1);
+}
+
+
+/*Fuente de enlaces tipo "a" dentro de datos cliente*/
+
+.contacto .columna_contacto .datoscliente_ubicacion #datoscliente a {
+  font-size: 2.5vh;
+  color: rgba(73, 70, 68, 1);
+  text-decoration: none;
+}
+
+
+/*Fuente de Hover de enlaces tipo "a" dentro de datos cliente*/
+
+.contacto .columna_contacto .datoscliente_ubicacion #datoscliente a:hover {
+  color: #52A5A0;
+  text-decoration: none;
+}
+
+
+/*Mapa*/
+
+#mapa_contacto {
+  padding: 3%;
+  padding: 7px;
+  width: 500px;
+  justify-self: right;
 }
