Se sube contenido de paginas (productos)(reserva)

--- a/src/app/components/barraNavegacion/barraNavegacion.module.css
+++ b/src/app/components/barraNavegacion/barraNavegacion.module.css
@@ -1,65 +1,98 @@
-.header_navbar{
-    /* opacity: 0.9; */
-    background-color: #9C1B1C;
+.header_navbar {
+  /* opacity: 0.9; */
+  background-color: #9c1b1c;
 }
-.logo{
-   margin: 0.8rem;
-   margin-right: 100px;
+.logo {
+  margin-right: 100px;
 }
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    margin: 0 20px;
-}
-
-.navbar_lista li{
-    position: relative;
-    font-family: 'Anek Devanagari', sans-serif;
-    font-size: 20px;
-    padding: 0.7rem;
-    margin-right: 9px;
-    list-style: none;
-}
-.navbar_lista li::after{
-    content: "";
-    position: absolute;
-    bottom: 2px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    border-radius: 1000px;
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform 0.35s ease-out;
-}
-.navbar_lista li:hover::after{
-    transform: scaleX(1);
-    transform-origin: bottom;
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 20px;
 }
 
-.navbar_link{
-    text-decoration: none;
-    color: #ffff;
-
-    
+.navbar_lista li {
+  position: flex;
+  font-family: "Anek Devanagari", sans-serif;
+  font-size: 20px;
+  padding: 0.7rem;
+  margin-right: 9px;
+  list-style: none;
 }
-.navbar_lista{
-    display: flex;
-    padding: 1rem;
-    
+.navbar_lista li::after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  border-radius: 1000px;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.35s ease-out;
+}
+.navbar_lista li:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom;
 }
 
-.button_Reserva{
-    display: grid;
-    place-items: center center;
-    font-family: 'Anek Devanagari', sans-serif;
-    text-decoration: none;
-    font-size: 20px;
-    color: #fff;
-    text-shadow: black 0.1em 0.1em 0.2em;
-    background-color: #E6B74F;
-    border-radius: 6px;
-    margin-left: 20px;
-    padding: 5px 20px;
+.navbar_link {
+  text-decoration: none;
+  color: #ffff;
+}
+.navbar_lista {
+  display: flex;
+  padding: 1rem;
+}
+/* ---------------------------------------------------------------------------------------------------------------- */
+.button_Reserva {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  font-size: 17px;
+  padding: 0.7em 1.7em; /* aquí se le cambía el tamaño */
+  font-weight: 500;
+  background: #e0a522;
+  color: white;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.6em;
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+}
+
+.label {
+  position: relative;
+  top: -1px;
+}
+
+.transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: #b3841b;
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button_Reserva:hover .transition {
+  width: 14em;
+  height: 14em;
+}
+
+.button_Reserva:active {
+  transform: scale(0.97);
 }
