--- a/src/app/productos/productos.module.css
+++ b/src/app/productos/productos.module.css
@@ -5,9 +5,9 @@
     padding: 20px;
     text-align: center;
     width: 100%;
-    height: 500px;
+    height: 600px;
   }
-  
+  /* background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('/image/banner_productos.png'); */
   .banner h1 {
     padding: 40px;
     color: #fff;
