--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,29 @@
+.banner_home_container {
+  display: flex;
+  width: 100%;
+  height: 872px;
+  margin-bottom: 40px;
+  align-items: center;
+  justify-content: center;
+  background-image: url("/image/BannerRukaWeshakellu.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 0 0 450px 450px;
+}
+.banner_home_container h1 {
+  color: #ffffff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 100px;
+  padding-bottom: 60px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -32,92 +53,139 @@
   margin-top: 100px;
   color: black;
   font-size: 25px;
+  font-weight: bold;
 }
 
 /* FIN Recomendacion de la ruka */
-
+.vector_home_container {
+  width: 100%;
+  margin-bottom: 60px;
+  height: auto;
+}
+.vector_up {
+  display: flex;
+}
 /* nosotros primera parte */
 
 .container_nosotros {
-  max-width: 1200px;
-  width: 80%;
-  margin: auto;
   display: flex;
-  background-color: #e6b54a;
+  width: 70%;
+  /* height: 800px; */
+  margin: auto;
 }
 
 .img_nosotros {
   display: flex;
-  justify-content: flex-start;
+  height: 800px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  background-color: #e0a522;
+  padding: 0 80px;
   align-items: center;
+}
+.container_img_patron {
+  display: flex;
+  max-height: max-content;
+}
+.vector_patron_container {
+  width: 60px;
+  height: 30px;
+  margin-left: 20px;
 }
 
 .parrafo_nosotros {
   display: flex;
+  margin: 50px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   font-style: normal;
-  padding: 50px;
   width: 100%;
   max-width: 400px;
-  color: #FFFFFF;
-}
-
-.parrafo_nosotros h1 {
-  font-family: 'Bebas Neue';
   color: #ffffff;
 }
+.content_text_nosotros > * {
+  color: #ffffff;
+  padding-bottom: 40px;
+}
 
 .parrafo_nosotros h1 {
-  font-family: "Bebas Neue";
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 43px;
+  font-weight: bold;
+  font-size: 35px;
+  padding-top: 12px;
   text-align: center;
   margin: 0;
 }
 
 .parrafo_nosotros h2 {
-  font-family: "Bebas Neue";
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 30px;
   margin: 0;
   text-align: center;
 }
 
 .parrafo_nosotros p {
-  font-family: "Abel";
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-style: normal;
   font-weight: 180;
-  font-size: 19px;
+  font-size: 25px;
   text-align: center;
 }
 
-.saber_mas {
+.parrafo_nosotros button {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 17px;
+  padding: 0.7em 1.7em; /* aquí se le cambía el tamaño */
+  font-weight: bold;
+  background: #e08722;
+  color: white;
+  border: 3px;
+  border-color: aqua;
   position: relative;
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 180;
-  font-size: 22px;
-  text-align: right;
+  overflow: hidden;
+  border-radius: 0.6em;
+}
+.label {
+  position: relative;
+  top: -1px;
 }
 
-.saber_mas::after {
-  content: "";
+.gradient {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+}
+.transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: #b3841b;
+  border-radius: 9999px;
   width: 0;
-  height: 2px;
-  background-color: white;
-  bottom: -3px;
-  left: 280px;
-  transition: width 0.3s ease;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.saber_mas:hover::after {
-  width: 25%;
+.button_nosotros:hover .transition {
+  width: 14em;
+  height: 14em;
 }
 
+.button_nosotros:active {
+  transform: scale(0.97);
+}
 /*********Contacto*************/
 
 .contacto {
@@ -171,7 +239,6 @@
   margin: 10% auto;
 }
 
-
 /*Fuente de títulos*/
 
 .titulos_contacto h1 {
@@ -195,7 +262,6 @@
   text-align: center;
   align-self: center;
 }
-
 
 /*Fuente h1 dentro de datos cliente*/
 
