--- a/src/app/menu/menu.module.css
+++ b/src/app/menu/menu.module.css
@@ -1,25 +1,18 @@
-.card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  width: 300px;
-}
-
-.card img {
+.menuContenedor {
+  background-color: rgba(50, 47, 45, 1);
   width: 100%;
-  height: auto;
-  border-radius: 4px;
-  margin-bottom: 16px;
+  max-height: max-content;
+  display: block;
 }
-
-.card h3 {
-  font-size: 18px;
-  margin-bottom: 8px;
-  background-color: red;
+.fondoMenu {
+  background-image: url("/public/image/decoracionMenu.svg");
+  background-repeat: no-repeat;
+  background-size: auto;
 }
-
-.card p {
-  font-size: 14px;
-  color: #555;
-  margin-bottom: 16px;
+.bannerMenu {
+  width: 100%;
+  height: 436px;
+  background-image: url("/image/Banner-menu.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
