--- a/src/app/components/barraNavegacion/barraNavegacion.module.css
+++ b/src/app/components/barraNavegacion/barraNavegacion.module.css
@@ -1,7 +1,12 @@
 .header_navbar {
-  /* opacity: 0.9; */
+  opacity: 0.9;
   background-color: #9c1b1c;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 100%;
 }
+
 .logo {
   margin-right: 100px;
 }
@@ -52,7 +57,7 @@
   font-size: 17px;
   padding: 0.7em 1.7em; /* aquí se le cambía el tamaño */
   font-weight: 500;
-  background: #e0a522;
+  background: #e6b74f;
   color: white;
   border: none;
   position: relative;
