--- a/src/app/components/cardMenu/cardMenu.module.css
+++ b/src/app/components/cardMenu/cardMenu.module.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   padding: 20px;
   width: 1167px;
-  margin: 70px;
+  margin: 80px auto;
   display: flex;
 }
 .cardFondo {
