--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -1,151 +1,132 @@
 /**********************Pie Página******************/
 
 .pie_pagina {
-    font-family: "Bebas Neue";
-    width: 100%;
-    height: auto;
-    margin: auto;
-    background-color: #9C1B1C;
+  font-family: "Anek Devanagari", sans-serif;
+  width: 100%;
+  background-color: #9c1b1c;
 }
-
 
 /*Parte de arriba del footer, donde van los atajos*/
 
 .pie_pagina .grupo_1 {
-    width: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 1vh;
-    padding: 1vh;
+  width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1vh;
+  padding: 1vh;
 }
-
 
 /*Cajas del footer*/
 
 .box_footer {
-    display: flex;
-    text-align: center;
-    text-decoration: none;
-    color: #FFFFFF;
-    padding: 2vh;
+  display: flex;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 2vh;
 }
-
 
 /*---Primera columna de logo y redes sociales---*/
 
 /*Caja del Logo*/
-.pie_pagina .grupo_1 .box_footer .logo_redsocial{
-    margin: 0 auto;
+.pie_pagina .grupo_1 .box_footer .logo_redsocial {
+  margin: 0 auto;
 }
-
-
 
 /*Logo*/
 
 .pie_pagina .grupo_1 .box_footer figure img {
-    width: 200px;
+  width: 200px;
 }
-
 
 /*Caja donde se ubican los 3 Iconos de redes sociales*/
 
 .pie_pagina .grupo_1 .box_footer .logo_redsocial .redes_sociales {
-    height: 5vh;
+  height: 5vh;
 }
 
-
-/*Caja de cada ícono de red social */
+/*Caja de cada ícono de redsocial */
 
 .pie_pagina .grupo_1 .box_footer .logo_redsocial .redes_sociales i {
-    margin: 0 1vh;
-    color: #FFFFFF;
+  margin: 0 1vh;
+  color: #ffffff;
 }
 
-
-/*Hover de cada ícono de red social*/
+/*Hover de cada ícono de redsocial*/
 
 .pie_pagina .grupo_1 .box-footer .logo_redsocial .redes_sociales i:hover {
-    color: #52A5A0;
+  color: #afafaf;
 }
-
 
 /*Fuente h3 de pie de página*/
 
 .pie_pagina .grupo_1 .box_footer h3 {
-    font-size: 4vh;
-    margin-bottom: 3vh;
+  font-size: 20px;
+  margin-bottom: 12px;
 }
-
 
 /*Fuente p de pie de página*/
 
 .pie_pagina .grupo_1 .box_footer p {
-    margin-bottom:auto;
-    font-size: 3vh;
-    line-height: 0.5vh;
+  margin-bottom: auto;
+  font-size: 15px;
+  line-height: 0.5vh;
 }
-
 
 /*Fuente enlaces a otras páginas de pie de página*/
 
 .pie_pagina .grupo_1 .box_footer a {
-    text-decoration: none;
-    color: #FFFFFF;
+  text-decoration: none;
+  color: #ffffff;
 }
-
 
 /*Fuente de los enlaces de pie de página*/
 
 #quintacolumna .linksfooter a {
-    /*color: #FFFFFF;*/
-    text-align: center;
-    font-size: 2.5vh;
-    margin: 0 1vh;
-    line-height: 5vh;
+  /*color: #FFFFFF;*/
+  text-align: center;
+  font-size: 2.5vh;
+  margin: 0 1vh;
+  line-height: 5vh;
 }
 
 /*hover de los links*/
-#quintacolumna .linksfooter a:hover{
-    color:#52A5A0;
+#quintacolumna .linksfooter a:hover {
+  color: #afafaf;
 }
-
 
 /*Segunda columna*/
 
 #segundacolumna {
-    flex-direction: column;
-    gap:2vh;
+  flex-direction: column;
+  gap: 2vh;
 }
-
 
 /*Tercera columna*/
 
 #terceracolumna {
-    flex-direction: column;
-    gap:2vh;
+  flex-direction: column;
+  gap: 2vh;
 }
 
 #cuartacolumna {
-    flex-direction: column;
-    gap:1vh;
-    
+  flex-direction: column;
+  gap: 1vh;
 }
 
 #quintacolumna {
-    flex-direction: column;
+  flex-direction: column;
 }
-
 
 /*Grupo 2 de pie de pagina*/
 
 .pie_pagina .grupo_2 {
-    background-color: #9C1B1C;
-    text-align: center;
-    padding-bottom: 1vh;
-    color: #FFFFFF;
+  background-color: #9c1b1c;
+  text-align: center;
+  padding-bottom: 1vh;
+  color: #ffffff;
 }
-
 
 /*Fuente de grupo 2 pie de página*/
 /*
@@ -153,21 +134,27 @@
     font-size: 2vh;
 }*/
 
-
 /*Hover para cada botón del pie de página*/
 
 #segundacolumna h3:hover {
-    color: #52A5A0;
+  color: #afafaf;
 }
 
 #terceracolumna h3:hover {
-    color: #52A5A0;
+  color: #afafaf;
 }
 
 #cuartacolumna h3:hover {
-    color: #52A5A0;
+  color: #afafaf;
 }
 
 #cuartacolumna p:hover {
-    color: #52A5A0;
+  color: #afafaf;
+}
+.derechos_reservados_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #af4849;
+  color: #f5f5f5;
 }
