--- a/src/app/menu/menu.module.css
+++ b/src/app/menu/menu.module.css
@@ -10,8 +10,8 @@
   background-size: auto;
 }
 .bannerMenu {
-  width: 100%;
-  height: 436px;
+  width: 1920px;
+  height: 600px;
   background-image: url("/image/Banner-menu.png");
   background-repeat: no-repeat;
   background-size: cover;
