--- a/src/app/components/vectorMenu/vectormenu.module.css
+++ b/src/app/components/vectorMenu/vectormenu.module.css
@@ -1,3 +1,8 @@
 .vectorContenedor {
-  background-color: #e6b74f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 59px;
+  background-color: rgba(224, 165, 34, 1);
 }
