--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,7 +24,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 /* Recomendacion de la ruka */
@@ -146,7 +146,6 @@
   background: #e08722;
   color: white;
   border: 3px;
-  border-color: aqua;
   position: relative;
   overflow: hidden;
   border-radius: 0.6em;
@@ -188,116 +187,75 @@
 }
 /*********Contacto*************/
 
-.contacto {
-  height: 100vh;
-  min-height: 100vh;
-  /*Letra para toda la sección*/
-  font-family: "Bebas Neue";
-  width: 1500px;
-  max-width: 100%;
+.main hr {
+  border: 3px dashed;
+  width: 80%;
   margin: auto;
-  color: #e6b54a;
-  /*Para que los patrones y la columna central queden en la misma línea*/
+  color: #e08722;
+}
+.contacto {
+  display: flex;
+  width: 100%;
+  height: 648px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.fondo_contacto {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url("/image/fondo_hojas_secas.jpg");
+  background-size: cover;
+  width: 100%;
+}
+.simboarana {
+  user-select: none;
+}
+.info_contacto_container {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  align-items: center;
+}
+.info_contacto_container > * {
+  padding-bottom: 20px;
+  color: #f5f5f5;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.info_contacto_container h1 {
+  font-size: 30px;
+  user-select: none;
+}
+
+.info_contacto_container h3 {
+  font-size: 23px;
+  user-select: none;
+}
+.mapa_info_container h1 {
+  color: #f5f5f5;
+  padding-bottom: 20px;
+  user-select: none;
+  font-size: 30px;
+}
+
+.mapa_info_container h5 {
+  color: #f5f5f5;
+  padding-bottom: 20px;
+  user-select: none;
+  font-size: 17px;
+}
+.mapa_info_container {
+  width: 800px;
+}
+.mapa_contacto_container {
   display: flex;
   justify-content: space-between;
-  /*Para que los patrones de los costados se escondan*/
-  overflow: hidden;
-  background-color: #ffffff;
-}
-
-/*Contacto y Ubicación, datos de la columna central*/
-
-.contacto .columna_contacto {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  gap: 5px;
-  height: 98%;
-  width: 70%;
-}
-
-/*Parte de arriba de la columna, imagen de araña más títulos*/
-
-#columnaarriba {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  height: 30vh;
-  margin: 2% auto 2% auto;
-}
-
-/*Caja de imagen de araña*/
-
-.imagen_contacto {
-  text-align: center;
-}
-
-/*Caja que contiene los títulos*/
-
-.titulos_contacto {
-  text-align: center;
-  margin: 10% auto;
-}
-
-/*Fuente de títulos*/
-
-.titulos_contacto h1 {
-  font-size: 6vh;
-}
-
-/*Este componente es de datos cliente y mapa*/
-
-.datoscliente_ubicacion {
-  display: flex;
-  flex-direction: row;
-  width: 140vh;
   max-width: 100%;
-  margin: 5% auto;
+  height: 600px;
 }
-
-/*Datos cliente*/
-
-#datoscliente {
-  width: 100%;
-  text-align: center;
-  align-self: center;
-}
-
-/*Fuente h1 dentro de datos cliente*/
-
-.contacto .columna_contacto .datoscliente_ubicacion #datoscliente h1 {
-  font-size: 4vh;
-  line-height: 7vh;
-}
-
-/*Fuente h3 dentro de datos cliente*/
-
-.contacto .columna_contacto .datoscliente_ubicacion #datoscliente h3 {
-  font-size: 2.5vh;
-  line-height: 3vh;
-  color: rgba(73, 70, 68, 1);
-}
-
-/*Fuente de enlaces tipo "a" dentro de datos cliente*/
-
-.contacto .columna_contacto .datoscliente_ubicacion #datoscliente a {
-  font-size: 2.5vh;
-  color: rgba(73, 70, 68, 1);
-  text-decoration: none;
-}
-
-/*Fuente de Hover de enlaces tipo "a" dentro de datos cliente*/
-
-.contacto .columna_contacto .datoscliente_ubicacion #datoscliente a:hover {
-  color: #52a5a0;
-  text-decoration: none;
-}
-
-/*Mapa*/
-
-#mapa_contacto {
-  padding: 3%;
-  padding: 7px;
-  width: 500px;
-  justify-self: right;
+.mapa_contacto {
+  width: 700px;
+  height: 400px;
+  border: 0;
 }
