--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -2,6 +2,7 @@
 
 .pie_pagina {
   font-family: "Anek Devanagari", sans-serif;
+  color: #f5f5f5;
   width: 100%;
   background-color: #9c1b1c;
 }
@@ -12,9 +13,8 @@
   width: 100%;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: 0.6fr 1.8fr 0.6fr;
   grid-gap: 1vh;
-  padding: 1vh;
 }
 
 /*Cajas del footer*/
@@ -22,117 +22,64 @@
 .box_footer {
   display: flex;
   text-align: center;
+  justify-content: center;
   text-decoration: none;
   color: #ffffff;
-  padding: 2vh;
+  margin: 2vh;
+}
+.icons_footer {
+  margin: 15px;
+}
+.redes_sociales {
+  display: flex;
 }
 
-/*---Primera columna de logo y redes sociales---*/
-
-/*Caja del Logo*/
-.pie_pagina .grupo_1 .box_footer .logo_redsocial {
-  margin: 0 auto;
+.redes_sociales > * {
+  padding-right: 20px;
 }
 
-/*Logo*/
-
-.pie_pagina .grupo_1 .box_footer figure img {
-  width: 200px;
+.segundacolumna {
+  gap: 2vh;
 }
 
-/*Caja donde se ubican los 3 Iconos de redes sociales*/
-
-.pie_pagina .grupo_1 .box_footer .logo_redsocial .redes_sociales {
-  height: 5vh;
+.links_footer_container {
+  padding-right: 7px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 
-/*Caja de cada ícono de redsocial */
-
-.pie_pagina .grupo_1 .box_footer .logo_redsocial .redes_sociales i {
-  margin: 0 1vh;
-  color: #ffffff;
-}
-
-/*Hover de cada ícono de redsocial*/
-
-.pie_pagina .grupo_1 .box-footer .logo_redsocial .redes_sociales i:hover {
-  color: #afafaf;
-}
-
-/*Fuente h3 de pie de página*/
-
-.pie_pagina .grupo_1 .box_footer h3 {
+.links_footer_container h2 {
   font-size: 20px;
-  margin-bottom: 12px;
+}
+.links_footer_container div {
+  padding: 20px 40px;
+}
+.text_link {
+  font-size: 25px;
+  font-weight: bold;
+  padding-bottom: 12px;
+}
+.link_menu > * {
+  padding-bottom: 20px;
+}
+.link_productos > * {
+  padding-bottom: 20px;
+}
+.link_reservas > * {
+  padding-bottom: 20px;
 }
 
-/*Fuente p de pie de página*/
-
-.pie_pagina .grupo_1 .box_footer p {
-  margin-bottom: auto;
-  font-size: 15px;
-  line-height: 0.5vh;
+/* #terceracolumna {
+  display: flex;
+  align-items: center;
+} */
+.linksfooter > * {
+  padding-top: 15px;
 }
-
-/*Fuente enlaces a otras páginas de pie de página*/
-
-.pie_pagina .grupo_1 .box_footer a {
-  text-decoration: none;
-  color: #ffffff;
+.links_maps > * {
+  padding: 10px;
 }
-
-/*Fuente de los enlaces de pie de página*/
-
-#quintacolumna .linksfooter a {
-  /*color: #FFFFFF;*/
-  text-align: center;
-  font-size: 2.5vh;
-  margin: 0 1vh;
-  line-height: 5vh;
-}
-
-/*hover de los links*/
-#quintacolumna .linksfooter a:hover {
-  color: #afafaf;
-}
-
-/*Segunda columna*/
-
-#segundacolumna {
-  flex-direction: column;
-  gap: 2vh;
-}
-
-/*Tercera columna*/
-
-#terceracolumna {
-  flex-direction: column;
-  gap: 2vh;
-}
-
-#cuartacolumna {
-  flex-direction: column;
-  gap: 1vh;
-}
-
-#quintacolumna {
-  flex-direction: column;
-}
-
-/*Grupo 2 de pie de pagina*/
-
-.pie_pagina .grupo_2 {
-  background-color: #9c1b1c;
-  text-align: center;
-  padding-bottom: 1vh;
-  color: #ffffff;
-}
-
-/*Fuente de grupo 2 pie de página*/
-/*
-.pie-pagina .grupo-2 small {
-    font-size: 2vh;
-}*/
 
 /*Hover para cada botón del pie de página*/
 
@@ -140,11 +87,11 @@
   color: #afafaf;
 }
 
-#terceracolumna h3:hover {
+.link_map:hover {
   color: #afafaf;
 }
 
-#cuartacolumna h3:hover {
+.link_waze:hover {
   color: #afafaf;
 }
 
