--- a/src/app/reserva/reserva.module.css
+++ b/src/app/reserva/reserva.module.css
@@ -26,7 +26,7 @@
   color: #e6b54a;
 }
 
-.reserva_container_content p {
+.reserva__content_parrafo {
   font-size: 20px;
   color: #fff;
   margin: 20px auto 30px;
@@ -36,30 +36,195 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60%;
+  width: 80%;
   margin: 24px auto;
   padding: 0 24px;
   /* box-shadow: 0 0 20px 0 rgba(255,255,255,.3); */
 }
 
-.reserva_form_container form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.reserva_form_container form .block {
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-.reserva_form_container form .blockOne {
-  grid-column: 1 / 3;
-}
-.reserva_form_container form,
-.reserva_form_container input,
-.reserva_form_container textarea {
+.reserva_form_container {
+  display: flex;
   width: 100%;
-  padding: 11px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.reserva_inputs_container {
+  display: grid;
+  width: 100%;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.4fr 0.5fr 2.1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "nombre apellido ."
+    "correo telefono ."
+    "area-informacion area-informacion .";
+}
+.nombre {
+  grid-area: nombre;
+}
+.correo {
+  grid-area: correo;
+}
+.area_informacion {
+  grid-area: area-informacion;
+}
+.apellido {
+  grid-area: apellido;
+}
+.telefono {
+  grid-area: telefono;
+}
+/* -------------fin grid------------ */
+
+.reserva_inputs_container div {
+  padding: 20px 0px;
+}
+
+.reserva_inputs_container label {
+  padding-bottom: 15px;
+  color: #fff;
+  font-size: 17px;
+  font-weight: bold;
+}
+.nombre {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 90%;
+}
+
+.nombre input {
+  background-color: #696969;
+  color: #f5f5f5;
   border: none;
+  font-size: 20px;
+  width: 100%;
+  height: 40px;
+}
+
+.input_text_default::placeholder {
+  color: #aaa;
+  font-size: 17px;
+}
+.apellido {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 90%;
+}
+.apellido input {
+  background-color: #696969;
+  color: #f5f5f5;
+  border: none;
+  font-size: 20px;
+  width: 100%;
+  height: 40px;
+}
+
+.correo {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 90%;
+}
+
+.correo input {
+  background-color: #696969;
+  color: #f5f5f5;
+  border: none;
+  font-size: 20px;
+  width: 100%;
+  height: 40px;
+}
+
+.telefono {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 90%;
+}
+.telefono input {
+  background-color: #696969;
+  color: #f5f5f5;
+  border: none;
+  font-size: 20px;
+  width: 100%;
+  height: 40px;
+}
+
+.text_select_form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+}
+
+.fecha {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 100%;
+}
+.fecha input {
+  background-color: #696969;
+  color: #f5f5f5;
+  font-size: 20px;
+  font-size: 17px;
+  width: 80%;
+  height: 40px;
+}
+
+.cantidad {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 100%;
+}
+.cantidad select {
+  background-color: #696969;
+  color: #f5f5f5;
+  font-size: 17px;
+  width: 80%;
+  height: 40px;
+}
+
+.tipo_salon {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 100%;
+}
+.tipo_salon select {
+  background-color: #696969;
+  color: #f5f5f5;
+  font-size: 17px;
+  width: 80%;
+  height: 40px;
+}
+
+.select_personas_container_form {
+  height: 30px;
+}
+
+.inputs_optionals {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.textarea_reserva {
+  resize: none;
+  background-color: #696969;
+  color: #f5f5f5;
+  font-size: 20px;
+  height: 241px;
+  width: 1158px;
+}
+.textarea_reserva::placeholder {
+  color: #aaa;
 }
 
 .reserva_form_container form button {
@@ -74,8 +239,68 @@
   font-size: 25px;
   color: #fff;
 }
-.reserva_inputs_container {
-  display: flexbox;
+.info_reserva_title {
+  color: #fff;
+  font-size: 17px;
+  font-weight: lighter;
+}
+.info_reserva_title span {
+  font-weight: bold;
 }
 
 /* ------------------------------------------------------------ */
+
+.direccion_reserva_form {
+  display: flex;
+  width: 100%;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+}
+.info_seccion_form {
+  display: flex;
+  color: #f5f5f5;
+  width: 40%;
+  flex-direction: column;
+  margin: 40px;
+  padding-left: 70px;
+}
+.direccion_contenedor_form {
+  padding-bottom: 20px;
+}
+.direccion_contenedor_form h2 {
+  font-size: 30px;
+  padding-bottom: 20px;
+}
+.direccion_contenedor_form h3 {
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.telefono_contenedor_form {
+  padding-bottom: 20px;
+}
+
+.telefono_contenedor_form h2 {
+  font-size: 30px;
+  padding-bottom: 20px;
+}
+
+.telefono_contenedor_form h3 {
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.mapa_seccion_form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 60%;
+  align-items: center;
+  justify-content: center;
+}
+.mapa_reserva {
+  width: 90%;
+  margin: 20px auto;
+  height: 300px;
+}
