--- a/src/app/reserva/reserva.module.css
+++ b/src/app/reserva/reserva.module.css
@@ -13,6 +13,8 @@
 }
 
 .reserva_container_content {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   margin: auto;
 }
@@ -36,30 +38,46 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60%;
+  width: 90%;
   margin: 24px auto;
   padding: 0 24px;
   /* box-shadow: 0 0 20px 0 rgba(255,255,255,.3); */
 }
 
-.reserva_form_container form {
+.reserva_inputs_container {
   display: grid;
+  width: 100%;
+  margin: auto;
   grid-template-columns: 1fr 1fr;
-}
-
-.reserva_form_container form .block {
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-.reserva_form_container form .blockOne {
   grid-column: 1 / 3;
 }
+
 .reserva_form_container form,
-.reserva_form_container input,
-.reserva_form_container textarea {
+.reserva_form_container input {
   width: 100%;
   padding: 11px;
+  border-radius: 4px;
   border: none;
+}
+
+.block {
+  margin: 0 10px;
+}
+
+.block label {
+  font-size: 20px;
+  color: #fff;
+  font-weight: bold;
+}
+.block input {
+  background-color: #696969;
+}
+.block input:focus-visible {
+  outline: 2px solid #343434;
+}
+.block input::placeholder {
+  color: #aaaaaa;
+  font-weight: 600;
 }
 
 .reserva_form_container form button {
@@ -71,11 +89,166 @@
   color: #fff;
 }
 .reserva_form_title {
-  font-size: 25px;
+  text-align: center;
+  font-size: 37px;
   color: #fff;
 }
 .reserva_inputs_container {
-  display: flexbox;
+  margin-top: 20px;
+}
+.container_reserva_options {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+}
+.container_reserva_list {
+  display: flex;
+}
+.blockOne {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 }
 
+.blockOne label {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+}
+.blockOne input {
+  background-color: #696969;
+  color: #fff;
+  font-size: 17px;
+}
+.blockOne input:focus-visible {
+  outline: 2px solid #343434;
+}
+
+.blockOne select {
+  padding: 11px;
+  width: 200px;
+  border-radius: 4px;
+  border: none;
+  user-select: none;
+  color: #fff;
+  font-size: 17px;
+  background-color: #696969;
+}
+.blockOne textarea {
+  margin-top: 15px;
+  font-size: 17px;
+  color: #fff;
+  resize: none;
+  background-color: #696969;
+}
+
+.blockOne textarea::placeholder {
+  color: #aaaaaa;
+  font-weight: 600;
+}
+
+.textarea_form {
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding: 12px;
+}
+.textarea_form:focus-visible {
+  outline: 2px solid #343434;
+}
+
+.blockOne h6 {
+  font-size: 15px;
+  color: #fff;
+}
+.blockOne span {
+  color: #e6b74f;
+}
+/* ---------------------------- botón formulario ---------------------------- */
+.button_Reserva {
+  width: fit-content;
+  min-width: 220px;
+  height: 60px;
+  padding: 8px;
+  font-size: 23px;
+  color: #fff;
+  border-radius: 10px;
+  border: 2.5px solid #b3841b;
+  box-shadow: 0px 0px 20px -20px;
+  cursor: pointer;
+  background-color: #e6b74f;
+  transition: all 0.2s ease-in-out 0ms;
+  user-select: none;
+  font-family: "Poppins", sans-serif;
+}
+
+.button_Reserva:hover {
+  background-color: #b3841b;
+  box-shadow: 0px 0px 20px -18px;
+}
+
+.button_Reserva:active {
+  transform: scale(0.95);
+}
 /* ------------------------------------------------------------ */
+.info_reserva_container {
+  display: flex;
+  width: 90%;
+  height: 500px;
+  margin: 80px auto;
+}
+.containersbox_reserva_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 30px;
+  width: 50%;
+}
+.containersbox_reserva_mapa {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.mapa_contacto_reserva {
+  width: 100%;
+  height: 400px;
+}
+.containersbox_direccion {
+  margin: 20px;
+}
+
+.containersbox_direccion h1 {
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: 5px;
+}
+.containersbox_direccion h2 {
+  margin-top: 15px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: normal;
+}
+.box_direccion_telefono {
+  display: flex;
+}
+
+.containersbox_telefonos {
+  margin: 20px;
+}
+.containersbox_telefonos h1 {
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: 5px;
+}
+.containersbox_telefonos h2 {
+  margin-top: 15px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: normal;
+}
