--- a/src/app/components/Card_recomendacion/Card.module.css
+++ b/src/app/components/Card_recomendacion/Card.module.css
@@ -7,14 +7,17 @@
   display: flex;
   flex-direction: column;
 }
-
-.card .imageUrl {
+.imageUrl {
+  border-radius: 15px;
+}
+.card {
   border-radius: 30px;
-  transition: transform 0.3s ease;
+  transition: all 0.2s ease-in-out;
+  user-select: none;
 }
 
-.card .imageUrl:hover {
-  transform: scale(1.3);
+.card:hover {
+  transform: scale(1.1);
 }
 
 .card .h2 {
