--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 .banner_home_container {
   display: flex;
   width: 100%;
-  height: 872px;
+  height: 880px;
   margin-bottom: 40px;
   align-items: center;
   justify-content: center;
@@ -9,7 +9,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 0 0 450px 450px;
+  border-radius: 0 0 430px 430px;
 }
 .banner_home_container h1 {
   color: #ffffff;
@@ -136,7 +136,7 @@
   font-size: 25px;
   text-align: center;
 }
-
+/* ------------------------ boton de imagen nosotros ------------------------ */
 .parrafo_nosotros button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -167,7 +167,7 @@
 .transition {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   transition-duration: 500ms;
-  background-color: #b3841b;
+  background-color: #ff8c00;
   border-radius: 9999px;
   width: 0;
   height: 0;
